--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,72 @@
-.App {
+
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f3efef; 
+  margin: 0;
+  padding: 0;
+  color: #333;
+}
+
+/* Hlavní obal */
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: black;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+h1, h2 {
+  color: black;
   text-align: center;
+  text-decoration: underline;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: calc(100% - 24px);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  background-color: gray; /* Světle červená barva */
   color: white;
+  padding: 10px 20px;
+  margin: 10px 0;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: #e60000; /* Tmavší červená při hoveru */
 }
 
-.heart {
-  color: #ff0000;
+ul {
+  list-style-type: none;
+  padding: 0;
 }
 
-.small {
-  font-size: 0.75rem;
+li {
+  background-color: #ffe5e5;
+  margin: 5px 0;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+li button {
+  background-color: #ff3333;
+  padding: 5px 10px;
+}
+
+li button:hover {
+  background-color: #cc0000;
 }
